# amazon_challenge_grasping

./: CMakeLists.txt  contributors.txt  package.xml  setup.py
config/: base_move.yaml  base_scan.yaml  grasp_check_dict.yaml  grasp_max_effort_dict.yaml  grasping_param_dict.yaml  touch_shelf_test_dict.yaml
launch/: base_move_server.launch  detector_action.launch  grasping_action.launch  shelf_publisher.launch  test_touch.launch
src/calibrateBase/: baseMove.py  baseScan.py  base_move_server  calibrateBase.py  linePublisher.py  lineScan.py  line_extraction.py  shelfPublisher.py
src/detector/: detector_action.py
src/grasping/: generate_object_dict.py  genrate_object_dict.py  grasping_action.py  grasping_action.py.orig  grasping_lib.py  myTypes.py  touchTest.py
srv/: BaseMove.srv  blindSeg.srv
