<package>
  <name>amazon_challenge_grasping</name>
  <version>0.0.0</version>
  <description>Grasping utilities for APC'15</description>
  <author email="kaiyuh@kth.se">Kaiyu Hang</author>
  <maintainer email="kaiyuh@kth.se">Kaiyu Hang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>pr2_moveit_config</build_depend>

  <run_depend>pr2_moveit_config</run_depend>
  <run_depend>python-termcolor</run_depend>

</package>
