<package>
  <name>amazon_challenge_grasping</name>
  <version>0.0.0</version>
  <description>Grasping utilities for APC'15</description>
  <author email="kaiyuh@kth.se">Kaiyu Hang</author>
  <maintainer email="kaiyuh@kth.se">Kaiyu Hang</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>geometry_msgs</run_depend>
</package>
